--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.26.2"
+    "date-fns": "^3.6.0",
+    "fastify": "^4.26.2",
+    "postgres": "^3.4.4"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
